prevent thumnail weather image stretching

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ h1{
 }
 
 #weather-icon{
+	max-height:120px;
+	max-width:120px;
 	width:50%;
 	height:auto;
 }
